@@ -4,12 +4,16 @@ import authRoutes from "./routes/authRoutes.js";
 import wordRoutes from "./routes/wordRoutes.js";
 import adminRoutes from "./routes/adminRoutes.js";
 import userRoutes from "./routes/userRoutes.js";
+import cookieParser from "cookie-parser"; 
+
 
 import cors from "cors";
 
 const app = express();
 const port = 8080;
+
 app.use(express.json());
+app.use(cookieParser());
 
 const corsOptions = {
   origin: "http://localhost:3000",
@@ -17,6 +21,12 @@ const corsOptions = {
   credentials: true,
 };
 app.use(cors(corsOptions));
+
+app.use((req, res, next) => {
+  console.log(`Request method: ${req.method}, Request path: ${req.path}`);
+  next();
+})
+
 
 // Ładowanie tras do aplikacji
 app.use("/report", reportRoutes); // Wszystkie endpointy zaczynające się od "/report" będą obsługiwane przez reportRoutes
