@@ -36,4 +36,5 @@ Działania dla uzytnikikach
 "/users-update" >>> "/user/update - updatuje dane wybranego uzytkownika
 "/search-user" >>> "/user/search" - wyszuwiarka w panelu admina
 
-do naprawy: panel admina nie działa?
+do naprawy: panel admina nie działa? - naprawione
+znaleziony bug - wyszukiwanie po dacie w report panel dziwnie działa?
